Added generic query manager example, minor improvements to the GQM API.