@@ -80,8 +80,8 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
         } catch (IntrospectionException e) {
             throw new BeanException("Couldn't introspect the bean with class '" + beanClass_.getName() + "'.", beanClass, e);
         }
-        PropertyDescriptor[] bean_properties = bean_info.getPropertyDescriptors();
-        for (PropertyDescriptor bean_property : bean_properties) {
+        var bean_properties = bean_info.getPropertyDescriptors();
+        for (var bean_property : bean_properties) {
             beanProperties_.put(bean_property.getName().toLowerCase(), bean_property);
         }
 
@@ -112,22 +112,26 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
 
         BeanType instance = null;
         try {
-            instance = beanClass_.newInstance();
-        } catch (InstantiationException e) {
-            SQLException e2 = new SQLException("Can't instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            instance = beanClass_.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException | InstantiationException e) {
+            var e2 = new SQLException("Can't instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
             e2.initCause(e);
             throw e2;
         } catch (IllegalAccessException e) {
-            SQLException e2 = new SQLException("No permission to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            var e2 = new SQLException("No permission to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            e2.initCause(e);
+            throw e2;
+        } catch (NoSuchMethodException e) {
+            var e2 = new SQLException("No default constructor to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
             e2.initCause(e);
             throw e2;
         }
 
-        ResultSetMetaData meta = resultSet.getMetaData();
+        var meta = resultSet.getMetaData();
         String column_name;
         String column_label;
 
-        for (int i = 1; i <= meta.getColumnCount(); i++) {
+        for (var i = 1; i <= meta.getColumnCount(); i++) {
             column_name = meta.getColumnName(i).toLowerCase();
             column_label = meta.getColumnLabel(i).toLowerCase();
             if (beanProperties_.containsKey(column_name)) {
@@ -149,50 +153,50 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
 
     private void populateBeanProperty(BeanType instance, String propertyName, ResultSetMetaData meta, ResultSet resultSet, int columnIndex)
     throws SQLException {
-        PropertyDescriptor property = beanProperties_.get(propertyName);
-        Method write_method = property.getWriteMethod();
+        var property = beanProperties_.get(propertyName);
+        var write_method = property.getWriteMethod();
         if (write_method != null) {
             try {
-                int column_type = meta.getColumnType(columnIndex);
+                var column_type = meta.getColumnType(columnIndex);
                 Object typed_object;
                 try {
                     typed_object = datasource_.getSqlConversion().getTypedObject(resultSet, columnIndex, column_type, property.getPropertyType());
                 } catch (DatabaseException e) {
-                    SQLException e2 = new SQLException("Data conversion error while obtaining the typed object.");
+                    var e2 = new SQLException("Data conversion error while obtaining the typed object.");
                     e2.initCause(e);
                     throw e2;
                 }
 
                 // the sql conversion couldn't create a typed value
                 if (null == typed_object) {
-                    // check if the object returned by the resultset is of the same type hierarchy as the property type
-                    Object column_value = resultSet.getObject(columnIndex);
+                    // check if the object returned by the result set is of the same type hierarchy as the property type
+                    var column_value = resultSet.getObject(columnIndex);
                     if (column_value != null &&
                         property.getPropertyType().isAssignableFrom(column_value.getClass())) {
                         typed_object = column_value;
                     }
                     // otherwise try to call the property type's constructor with a string argument
                     else {
-                        String column_stringvalue = resultSet.getString(columnIndex);
-                        if (column_stringvalue != null) {
+                        var column_string_value = resultSet.getString(columnIndex);
+                        if (column_string_value != null) {
                             try {
-                                Constructor<?> constructor = property.getPropertyType().getConstructor(String.class);
+                                var constructor = property.getPropertyType().getConstructor(String.class);
                                 if (constructor != null) {
-                                    typed_object = constructor.newInstance((Object[]) new String[]{column_stringvalue});
+                                    typed_object = constructor.newInstance((Object[]) new String[]{column_string_value});
                                 }
                             } catch (SecurityException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("No permission to obtain the String constructor of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("No permission to obtain the String constructor of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             } catch (NoSuchMethodException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("Couldn't find a String constructor for the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("Couldn't find a String constructor for the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             } catch (InstantiationException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("Can't instantiate a new instance of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("Can't instantiate a new instance of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             }
@@ -207,22 +211,22 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
                 }
             } catch (IllegalAccessException e) {
                 instance = null;
-                SQLException e2 = new SQLException("No permission to invoke the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
+                var e2 = new SQLException("No permission to invoke the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
                 e2.initCause(e);
                 throw e2;
             } catch (IllegalArgumentException e) {
                 instance = null;
-                SQLException e2 = new SQLException("Invalid arguments while invoking the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
+                var e2 = new SQLException("Invalid arguments while invoking the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
                 e2.initCause(e);
                 throw e2;
             } catch (InvocationTargetException e) {
                 instance = null;
-                SQLException e2 = new SQLException("The '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "' has thrown an exception");
+                var e2 = new SQLException("The '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "' has thrown an exception");
                 e2.initCause(e);
                 throw e2;
             } catch (SQLException e) {
                 instance = null;
-                SQLException e2 = new SQLException("SQLException while invoking the '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "'");
+                var e2 = new SQLException("SQLException while invoking the '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "'");
                 e2.initCause(e);
                 throw e2;
             }
